# holoscript

./: .ai-decisions.md  .ai-schedule.yml  .eslintignore  .eslintrc.json  .gitattributes  .gitignore  .prettierignore  ARCHITECTURE.md  BRITTNEY_TRAINING_EXAMPLES.md  BROWSER_CONTROL_SETUP.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPLETION_SUMMARY_PHASES_3_5.md  COMPREHENSIVE_TEST_REPORT.md  CONTRIBUTING.md  Cargo.toml  DELIVERABLES_INDEX.md  DEPLOYMENT.md  EXECUTIVE_SUMMARY.md  FINAL_STATUS_REPORT.md  GRAPHICS_IMPLEMENTATION_SUMMARY.md  GRAPHICS_QUICK_START.md  GRAPHICS_TRAITS.md  HOLOLAND_AUDIT.md  HOLOSCRIPT_INFINITY_ASSISTANT_INTEGRATION.md  HOLOSCRIPT_INFINITY_ASSISTANT_SUMMARY.md  HOLOSCRIPT_PLUS_MERGE_COMPLETE.md  HOLOSCRIPT_REVOLUTION_COMPLETE.md  HoloScript_Omega_Audit_Feb_2026.md  IMPLEMENTATION_AUDIT_2026.md  LICENSE  MERGE_SUMMARY.txt  NAVIGATION_GUIDE.md  PACKAGE_TESTING_REPORT.md  PERFORMANCE.md  PERFORMANCE_TRACKING_IMPLEMENTATION.md  PERFORMANCE_TRACKING_QUICK_REFERENCE.md  PHASE_2_GRAPHICS_COMPLETE.md  PHASE_6_8_PARALLEL_IMPLEMENTATION_COMPLETE.md  PHASE_6_UI_COMPONENTS_GUIDE.md  (+38 more)
.antigravity/: mcp.json  mcp.json.backup-1769832873513
.claude/: settings.json  settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.performance-reports/: test-integration-1770438208781.json  test-integration-1770438295675.json
Formula/: holoscript.rb
audit-logs/: audit_results.txt  audit_results_redemption_v10.txt  audit_results_redemption_v11.txt  audit_results_redemption_v12.txt  audit_results_redemption_v13.txt  (+17 more)
(+457 files in other folders)
