# HoloScript Workspace Configuration
# Unified Rust package management for all HoloScript Rust components

[workspace]
members = [
    "packages/compiler-wasm",
    # TODO: holoscript-component disabled until WIT bindings are properly configured
    # "packages/holoscript-component",
]
resolver = "2"

# Shared metadata across all workspace members
[workspace.package]
version = "3.0.0"
authors = ["HoloScript Team"]
edition = "2021"
license = "MIT"
repository = "https://github.com/brianonbased-dev/HoloScript"

# Shared dependencies across workspace
[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2.93"
js-sys = "0.3"
typeshare = "1.0"

# Workspace-wide optimization profiles
[profile.release]
opt-level = "z"           # Optimize for size (critical for WASM)
lto = true                # Enable link-time optimization
codegen-units = 1         # Better inlining, single codegen unit
panic = "abort"           # Smaller panic handling (no unwinding)
strip = true              # Strip symbols from binary

[profile.dev]
opt-level = 0
debug = true

# Performance-optimized release for native binaries (CLI, LSP)
[profile.release-native]
inherits = "release"
opt-level = 3             # Max performance for native code
lto = "fat"               # Aggressive LTO
codegen-units = 1

# Beta/nightly channel support
[profile.beta]
inherits = "release"
opt-level = "s"           # Slightly faster builds than 'z'
